--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ a {
   text-decoration: none;
 }
 body {
-	/* overflow-x: hidden; */
+	width: 100%;
+	overflow-x: hidden;
 	scroll-behavior: smooth;
 	position: relative;
 }
@@ -72,6 +73,7 @@ body {
 }
 .sec-home .navbar {
 	border-bottom: 1px solid #ffffff69;
+	width: 97%;
 }
 .sec-home .navbar .navbar-brand h3 {
 color: white;
@@ -115,6 +117,7 @@ nav .navbar-toggler:focus {
 }
 .sec-home .content {
 	margin: 150px 0 0;
+	width: 100%;
 }
 .sec-home .content p {
 	color: #fff;
