--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ box-shadow: 0 0 1px 15px rgb(255 255 255 / 40%),
 	flex-direction: column;
 	position: relative;
 	margin: 40px 0;
+	position: relative;
 }
 .sec-content-servided .content-servided-itme .p1 {
 	font-size: 100px;
@@ -261,9 +262,21 @@ box-shadow: 0 0 1px 15px rgb(255 255 255 / 40%),
 	position: absolute;
 	top: -100px;
 }
-.sec-content-servided .content-servided-itme img {
-	width: 100px;
+.sec-content-servided .content-servided-itme .svg {
+	width: 80px;
+	background-color: white;
+	height: 80px;
 	border-radius: 50%;
+	padding: 30px;
+	color: blue;
+}
+.sec-content-servided .content-servided-itme .svg2 {
+	transform: rotate(134deg);
+    color: blue;
+    width: 55px;
+    height: 35px;
+		position: absolute;
+		top: 70px;
 }
 .sec-content-servided .content-servided-itme h6 {
 	text-align: center;
